--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -83,9 +83,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.4.1
+  version_num: 0.5.1
   release_notes: |
-    Release 0.4.1 on April 3rd, 2016
+    Release 0.5.1 on August 20th, 2016
   github:
     - user: nats-io
       repo: jnats
@@ -360,6 +360,21 @@ Releases:
     - user: nats-io
       repo: go-nats-streaming
       link: https://github.com/nats-io/go-nats-streaming
+
+- name: Java
+  type: streaming-client
+  supported: true
+  language: Java
+  author:
+    - name:
+      link:
+  version_num: 0.1.0
+  release_notes: |
+    Release 0.1.0 on August 26th, 2016
+  github:
+    - user: nats-io
+      repo: java-nats-streaming
+      link: https://github.com/nats-io/java-nats-streaming
 
 - name: NATS Server
   type: nats-server
