Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 4263b22b8b0d17a5945903de64049bbf35e5d522, reversing
changes made to d40999fb4f378ab0b4c661b567e9887ef4075f8d.

--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ pygmentsstyle = "native"
     [[menu.main]]
       name = "Community Clients"
       weight = 2
-      identifier = "nats-community"
+      identifier = "nats-comunity"
       parent = "nats"
   [[menu.main]]
     name = "NATS Streaming"
@@ -66,7 +66,7 @@ pygmentsstyle = "native"
     [[menu.main]]
       name = "Community Clients"
       weight = 2
-      identifier = "streaming-community"
+      identifier = "streaming-comunity"
       parent = "nats-streaming"
 
 [[menu.main]]
