Updated some clients and added the clarifai webinar post

--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -512,7 +512,7 @@ Releases:
   supported: false
   language: C++
   author:
-    - name: David
+    - name: David Sai
       link: https://github.com/davidsai
   version_num: 0.0.0
   release_notes: |
@@ -559,25 +559,25 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.3.8
+  version_num: 0.4.0
   release_notes: |
-    Release v0.3.8 on January 19th, 2017.
+    Release v0.4.0 on April 10th, 2017.
   github:
     - user: nats-io
       repo: nats-streaming-server
       link: https://github.com/nats-io/nats-streaming-server
   links:
-  - name: nats-streaming-server-v0.3.8-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-darwin-amd64.zip
-  - name: nats-streaming-server-v0.3.8-linux-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-linux-386.zip
-  - name: nats-streaming-server-v0.3.8-linux-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-linux-amd64.zip
-  - name: nats-streaming-server-v0.3.8-linux-arm.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-linux-arm.zip
-  - name: nats-streaming-server-v0.3.8-windows-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-windows-386.zip
-  - name: nats-streaming-server-v0.3.8-windows-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.3.8-windows-amd64.zip
+  - name: nats-streaming-server-v0.4.0-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.4.0/nats-streaming-server-v0.4.0-darwin-amd64.zip
+  - name: nats-streaming-server-v0.4.0-linux-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.3.8/nats-streaming-server-v0.4.0-linux-386.zip
+  - name: nats-streaming-server-v0.4.0-linux-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.4.0/nats-streaming-server-v0.4.0-linux-amd64.zip
+  - name: nats-streaming-server-v0.4.0-linux-arm.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.4.0/nats-streaming-server-v0.4.0-linux-arm.zip
+  - name: nats-streaming-server-v0.4.0-windows-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.4.0/nats-streaming-server-v0.4.0-windows-386.zip
+  - name: nats-streaming-server-v0.4.0-windows-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.4.0/nats-streaming-server-v0.4.0-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats-streaming/
