--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -206,9 +206,9 @@ Releases:
   author:
     - name: Christophe de Vienne
       link: https://github.com/cdevienne
-  version_num: 0.4.0
+  version_num: 0.0.0
   release_notes: |
-    Release 0.4.0 on April 17th, 2016.
+    Last udpated on May 22nd, 2017.
   github:
     - user: orus-io
       repo: elm-nats
