--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -544,26 +544,28 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.9.6
+  version_num: 1.0.0
   release_notes: |
-    Release v0.9.6 on December 15th, 2016.<br> Docker Image last updated December 16th, 2016.
+    Release v1.0.0 on July 12th, 2017.<br> Docker Image last updated July 12th, 2017.
   github:
     - user: nats-io
       repo: gnatsd
       link: https://github.com/nats-io/gnatsd
   links:
-  - name: gnatsd-v0.9.6-darwin-amd64.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-darwin-amd64.zip
-  - name: gnatsd-v0.9.6-linux-amd64.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-linux-amd64.zip
-  - name: gnatsd-v0.9.6-linux-386.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-linux-386.zip
-  - name: gnatsd-v0.9.6-linux-arm.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-linux-arm.zip
-  - name: gnatsd-v0.9.6-windows-386.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-windows-386.zip
-  - name: gnatsd-v0.9.6-windows-amd64.zip
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.9.6/gnatsd-v0.9.6-windows-amd64.zip
+  - name: gnatsd-v1.0.0-darwin-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-darwin-amd64.zip
+  - name: gnatsd-v1.0.0-linux-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-linux-amd64.zip
+  - name: gnatsd-v1.0.0-linux-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-linux-386.zip
+  - name: gnatsd-v1.0.0-linux-arm6.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-linux-arm6.zip
+  - name: gnatsd-v1.0.0-linux-arm7.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-linux-arm7.zip
+  - name: gnatsd-v1.0.0-windows-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-windows-386.zip
+  - name: gnatsd-v1.0.0-windows-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v1.0.0/gnatsd-v1.0.0-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
 
