--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -71,13 +71,13 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.2.0
+  version_num: 1.3.0
   release_notes: |
-    Release v1.2.0 on April 25th, 2016.
+    Release v1.3.0 on August 10th, 2017.
   github:
     - user: nats-io
-      repo: nats
-      link: https://github.com/nats-io/nats
+      repo: go-nats
+      link: https://github.com/nats-io/go-nats
 
 - name: Java
   type: nats-client
