Added make file to automate the setup process, and copy resources to the S3 bucket.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gm": "^1.23.0",
+    "gulp-plumber": "^1.1.0"
+  }
 }
