Fixes for the following urls:
- https://www.nats.io/documentation/CONTRIBUTING to https://www.nats.io/documentation/contributing
- https://github.com/joshglendenning to https://github.com/isobit
- https://www.nats.io/documentation/tutorials/nats-minio/www.minio.io to https://www.minio.io
- http://www.linuxcommand.org/man_pages/logrotate8.html to https://linux.die.net/man/8/logrotate
- https://github.com/nats-io/nats-docker/blob/master/gnatsd.conf to https://github.com/nats-io/nats-docker/blob/master/amd64/gnatsd.conf

--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -190,14 +190,14 @@ Releases:
   language: C++
   author:
     - name: Josh Glendenning
-      link: https://github.com/joshglendenning
+      link: https://github.com/isobit
   version_num: 0.0.0
   release_notes: |
     Last udpated on March 15th, 2015.
   github:
-    - user: joshglendenning
+    - user: isobit
       repo: arduino-nats
-      link: https://github.com/joshglendenning/arduino-nats
+      link: https://github.com/isobit/arduino-nats
 
 - name: Async Clojure
   type: nats-client
