debug travis artifact generation

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,13 @@ install:
 
 script:
   - gulp build
-
-after_script:
-  - if [[ "$TRAVIS_TAG" != "" ]]; then zip site_$TRAVIS_TAG.zip -r public/; fi
+  - if [[ "$TRAVIS_TAG" != "" ]]; then mv ./public site_$TRAVIS_TAG; fi
+  - if [[ "$TRAVIS_TAG" != "" ]]; then tar -zcvf site_$TRAVIS_TAG.tgz site_$TRAVIS_TAG; fi
 
 deploy:
   - provider: releases
     api_key: $GITHUB_TOKEN
     skip_cleanup: true
-    file: ./site_$TRAVIS_TAG.zip
+    file: ./site_$TRAVIS_TAG.tgz
     on:
       tags: true
