--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-clean": "^0.3.2",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.0",
-    "gulp-debug": "^2.1.0",
+    "gulp-debug": "^3.2.0",
     "gulp-gm": "0.0.8",
     "gulp-if": "^2.0.0",
-    "gulp-image-resize": "^0.7.1",
-    "gulp-less": "^3.0.3",
+    "gulp-image-resize": "^0.13.0",
+    "gulp-less": "^4.0.0",
     "gulp-minify-css": "^1.2.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-watch": "^4.3.5",
-    "run-sequence": "^1.2.2"
+    "gulp-shell": "^0.6.5",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,6 +29,7 @@
   "license": "ISC",
   "devDependencies": {
     "gm": "^1.23.1",
-    "gulp-plumber": "^1.1.0"
+    "gulp-plumber": "^1.1.0",
+    "npm-check-updates": "^2.14.1"
   }
 }
