--- a/data/events.toml
+++ b/data/events.toml
@@ -1,7 +1,7 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon Europe 2018"
 when = "May 2-4, 2018"
-who = "Wally Quevedo, Colin Sullivan"
+who = "Wally Quevedo, Colin Sullivan, Ginger Collison"
 what = "NATS Intro & NATS Deep Dive"
 where = "Bella Center / Copenhagen, Denmark"
 ref = "https://events.linuxfoundation.org/events/kubecon-cloudnativecon-europe-2018/program/schedule/"
