--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -23,9 +23,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.7.2
+  version_num: 1.7.6
   release_notes: |
-    Release 1.7.2 on October 10th, 2017.
+    Release 1.7.6 on March 23rd, 2018.
   github:
     - user: nats-io
       repo: cnats
@@ -71,9 +71,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.3.0
+  version_num: 1.5.0
   release_notes: |
-    Release v1.3.0 on August 10th, 2017.
+    Release v1.5.0 on March 23rd, 2018.
   github:
     - user: nats-io
       repo: go-nats
@@ -86,9 +86,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.7.1
+  version_num: 1.0
   release_notes: |
-    Release 0.7.1 on October 30th, 2016
+    Release 1.0 on February 2nd, 2017.
   github:
     - user: nats-io
       repo: jnats
@@ -116,9 +116,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.7.2
+  version_num: 0.8.2
   release_notes: |
-    Release v.0.7.2, January 10th, 2017
+    Release v.0.8.2 on March 1st, 2018.
   github:
     - user: nats-io
       repo: node-nats
@@ -131,9 +131,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.6.0
+  version_num: 0.7.0
   release_notes: |
-    Release v0.6.0 on September 15th, 2017.
+    Release v0.7.0 on April 4th, 2018.
   github:
     - user: nats-io
       repo: asyncio-nats
@@ -146,9 +146,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.5.0
+  version_num: 0.5.6
   release_notes: |
-    Release v.0.5.0, March 25th, 2017
+    Release v.0.5.6 on January 24th, 2018.
   github:
     - user: nats-io
       repo: python-nats
@@ -161,9 +161,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.8.2
+  version_num: 0.8.4
   release_notes: |
-    Release v0.8.2 on March 14th, 2017.
+    Release v0.8.4 February 23rd, 2018.
   github:
     - user: nats-io
       repo: ruby-nats
@@ -176,9 +176,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.2.2
+  version_num: 0.5.0
   release_notes: |
-    Release v0.2.2 on March 14th, 2017.
+    Release v0.5.0 on April 4th, 2018.
   github:
     - user: nats-io
       repo: pure-ruby-nats
@@ -266,9 +266,9 @@ Releases:
   author:
     - name: Ondrej Palkovsky
       link: https://github.com/ondrap
-  version_num: 0.0.0
+  version_num: 1.2.1
   release_notes: |
-    Last updated to 1.2.0 on November 25th, 2014
+    Last updated to 1.2.1 on September 2nd, 2015.
   github:
     - user: ondrap
       repo: nats-queue
@@ -296,9 +296,9 @@ Releases:
   author:
     - name: carwynmoore
       link: https://github.com/carwynmoore
-  version_num: 0.0.0
+  version_num: 0.2.0
   release_notes: |
-    Last updated on May 9th, 2016.
+    Last updated on July 20th, 2016.
   github:
     - user: carwynmoore
       repo: perl-nats
@@ -311,9 +311,9 @@ Releases:
   author:
     - name: Raül Pérez
       link: https://github.com/repejota
-  version_num: 0.8.0
+  version_num: 0.8.6
   release_notes: |
-    Last updated to v0.8.0 on July 27th, 2016.
+    Last updated to v0.8.6 on July 17th, 2017.
   github:
     - user: repejota
       repo: phpnats
@@ -341,9 +341,9 @@ Releases:
   author:
     - name: Máximo Cuadros
       link: https://github.com/mcuadros
-  version_num: 0.0.0
+  version_num: 0.1.0
   release_notes: |
-    Last updated September 19th, 2014.
+    Last updated February 4, 2016.
   github:
     - user: mcuadros
       repo: pynats
@@ -356,9 +356,9 @@ Releases:
   author:
     - name: John Lockwood
       link: https://github.com/johnwlockwood
-  version_num: 0.0.0
+  version_num: 0.7.3
   release_notes: |
-    Last updated January 14th, 2016.
+    Last updated November 12th, 2016.
   github:
     - user: johnwlockwood
       repo: txnats
@@ -371,9 +371,9 @@ Releases:
   author:
     - name: Frank Denis
       link: https://github.com/jedisct1
-  version_num: 0.1.1
+  version_num: 0.2.0
   release_notes: |
-    Last updated September 8th, 2015
+    Last updated August 15th, 2017.
   github:
     - user: jedisct1
       repo: rust-nats
@@ -401,9 +401,9 @@ Releases:
   author:
     - name: Mike Heath
       link: https://github.com/mheath
-  version_num: 0.0.0
+  version_num: 0.6.6
   release_notes: |
-    No release notes.
+    Release v0.6.6 on September 12th, 2016.
   github:
     - user: cloudfoundry-community
       repo: java-nats
@@ -416,9 +416,9 @@ Releases:
   author:
     - name: Daniel Wertheim
       link: https://github.com/danielwertheim
-  version_num: 0.10.1
+  version_num: 0.10.0
   release_notes: |
-    Release v0.10.1 on January 10th, 2017.
+    Release v0.10.0 on January 10th, 2017.
   github:
     - user: danielwertheim
       repo: mynatsclient
@@ -431,9 +431,9 @@ Releases:
   author:
     - name: Firman Maulana
       link: https://github.com/kakilangit
-  version_num: 0.1
+  version_num: 0.3.0.0-alpha.1
   release_notes: |
-    Release v0.1 on January 28th, 2016.
+    Release v3.0.0-alpha.1 on August 28.2016.
   github:
     - user: travelish
       repo: SwiftNats
@@ -461,9 +461,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.1.0
+  version_num: 0.1.2
   release_notes: |
-    Release v0.1.0 on October 8th, 2017.
+    Release v0.1.2 on February 15th, 2018.
   github:
     - user: nats-io
       repo: asyncio-nats-streaming
@@ -524,9 +524,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.0.5
+  version_num: 0.0.28
   release_notes: |
-    Last updated on September 25th, 2016.
+    Last updated on March 2nd, 2018.
   github:
     - user: nats-io
       repo: node-nats-streaming
@@ -539,9 +539,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.2.0
+  version_num: 0.2.2
   release_notes: |
-    Last updated on March 21st, 2017.
+    Last updated on January 31st, 2018.
   github:
     - user: nats-io
       repo: ruby-nats-streaming
@@ -619,9 +619,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.0.4
+  version_num: 1.1.0
   release_notes: |
-    Release v1.0.4 on September 27th, 2017.<br> Docker Image last updated September 27th, 2017.
+    Release v1.1.0 on March 23rd, 2018.<br> Docker Image last updated March 23rd, 2018.
   github:
     - user: nats-io
       repo: gnatsd
@@ -653,9 +653,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.7.2
+  version_num: 0.9.2
   release_notes: |
-    Release v0.7.2 January 29th, 2018<p>
+    Release v0.9.2 April 3rd, 2018<p>
     Release v0.8.0-beta is also available with Clustering support.
   github:
     - user: nats-io
