--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -655,8 +655,7 @@ Releases:
       link:
   version_num: 0.9.2
   release_notes: |
-    Release v0.9.2 April 3rd, 2018<p>
-    Release v0.8.0-beta is also available with Clustering support.
+    Release v0.9.2 April 3rd, 2018.
   github:
     - user: nats-io
       repo: nats-streaming-server
@@ -678,21 +677,5 @@ Releases:
     url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.9.2/nats-streaming-server-v0.9.2-windows-386.zip
   - name: nats-streaming-server-v0.9.2-windows-amd64.zip
     url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.9.2/nats-streaming-server-v0.9.2-windows-amd64.zip
-  - name: nats-streaming-server-v0.8.0-beta-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-darwin-amd64.zip
-  - name: nats-streaming-server-v0.8.0-beta-linux-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-linux-386.zip
-  - name: nats-streaming-server-v0.8.0-beta-linux-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-linux-amd64.zip
-  - name: nats-streaming-server-v0.8.0-beta-linux-arm6.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-linux-arm6.zip
-  - name: nats-streaming-server-v0.8.0-beta-linux-arm7.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-linux-arm7.zip
-  - name: nats-streaming-server-v0.8.0-beta-linux-arm64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-linux-arm64.zip
-  - name: nats-streaming-server-v0.8.0-beta-windows-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-windows-386.zip
-  - name: nats-streaming-server-v0.8.0-beta-windows-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.8.0-beta/nats-streaming-server-v0.8.0-beta-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats-streaming/
